default/objects/CoverageVSWarranty__mdt/CoverageVSWarranty__mdt.object-meta.xml
<CustomObject>
    <label>CoverageVSWarranty</label>
    <pluralLabel>CoverageVSWarranty</pluralLabel>
</CustomObject>