default/objects/CoverageVSWarranty__mdt/fields/Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Guarantee__c</fullName>
    <label>Guarantee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>