default/objects/CoverageVSWarranty__mdt/fields/SubReason__c.field-meta.xml
<CustomField>
    <fullName>SubReason__c</fullName>
    <label>Sub Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>